# flatfish-experiments-fps_vs_velocity_vs_ground_distance

./: CMakeLists.txt  README.md  manifest.xml
src/: CLAHE.cpp  CLAHE.hpp  CMakeLists.txt  Dummy.cpp  Dummy.hpp  HistogramEqualization.cpp  HistogramEqualization.hpp  ImageAnalysisTool.cpp  ImageAnalysisTool.hpp  ImageFeartureDetector.cpp  ImageFeartureDetector.hpp  ImageFeartureDetectorTools.cpp  ImageFeartureDetectorTools.hpp  Main.cpp  PocologTools.cpp  PocologTools.hpp  SingleImageHazeRemoval.hpp  extract_image_from_log.cpp
test/: CMakeLists.txt  ImageAnalysisTool_test.cpp  ImageAnalysis_test.cpp  ImageFeartureDetector_test.cpp  PocologTools_test.cpp  TestTools.cpp  TestTools.hpp  TestTools_test.cpp  test_Dummy.cpp
test/data&charts/: readme.txt  sk0_values.csv  sk1_values.csv  sk2_values.csv  sk3_values.csv  sk4_values.csv  sk5_values.csv
